[feat] support for anonymous access on resources
